--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "firebase": "^9.21.0",
+    "html-to-image": "^1.11.11",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.6.2",
+    "rodal": "^2.0.1",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
@@ -43,7 +48,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
