--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "recharts": "^2.6.2",
     "rodal": "^2.0.1",
     "sass": "^1.62.1",
