--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-tooltip": "^5.15.0",
     "recharts": "^2.6.2",
     "rodal": "^2.0.1",
     "sass": "^1.62.1",
